# coding-assistant

./: .gitignore  README.md  pyproject.toml
skills/: architecture-design.md  solution-options.md
src/coding_assistant/: __init__.py  deps.py  main.py  utils.py  web.py
src/coding_assistant/capabilities/: __init__.py  file_operations.py  reasoning_effort.py  skills.py
